<resources>
    <string name="app_name">taskmaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="all_tasks">All Tasks</string>
    <string name="placeholder_image">placeholder image</string>
    <string name="add_task">Add Task</string>
    <string name="total_tasks">Total Tasks : 0</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="title_activity_all_tasks">AllTasks</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success">Task added!</string>
    <string name="task_detail">Task Detail</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget egestas est. Nulla mi justo, condimentum non velit ac, interdum semper lectus. Vivamus at arcu.  "</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_button">settings button</string>
    <string name="user_settings">User Settings</string>
    <string name="username">Username</string>
    <string name="save">save</string>
    <string name="laundry">Do Laundry</string>
    <string name="homework">Do Homework</string>
    <string name="groceries">Go Grocery Shopping</string>
    <string name="task_state">Task State:</string>
    <string name="description">Description:</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="join_taskmaster">Join Taskmaster</string>
    <string name="sign_up_confirmation">Sign Up Confirmation</string>
    <string name="sign_in">Sign In</string>
    <string name="add_file">add File</string>
    <string name="_0">0</string>
</resources>