...
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="44dp"
        android:background="#00BCD4"
        android:text="@string/all_tasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addTask"
        app:layout_constraintTop_toTopOf="@+id/addTask" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="103dp"
        android:layout_height="43dp"
...
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="120dp"
        android:background="#00BCD4"
        android:text="@string/add_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeRecyclerView" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
...
